// Copyright 2021 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package com.google.firebase.testing.e2e;

message Types32 {
  int32 i = 1;
  sint32 si = 2;
  fixed32 f = 3;
  sfixed32 sf = 4;
  float fl = 5;
  uint32 ui = 6;
}

message Types64 {
  int64 i = 1;
  sint64 si = 2;
  fixed64 f = 3;
  sfixed64 sf = 4;
  double db = 5;
  uint64 ui = 6;
}

message Other {
  bool boolean = 1;
  string str = 2;
  bytes bts = 3;
}

message Types {
  Types32 types32 = 1;
  Types64 types64 = 2;
  Other other = 3;
}
